[tool.poetry]
name = "skyflowbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
urlextract = "^1.5.0"
pyre2 = "^0.3.6"
replit = "^3.2.4"
Flask = "^2.0.2"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
